routing aufgesplittet in zwei files und websocket chat implementiert
routes/index ab jetzt für Seitenzugriffe und
routes/session für alle sessionbezogenen Datenbankzugriffe

websocket implementiert und testweise chat eingebaut

--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
 					<li class="active"><a href="/">Home</a></li>
 					<li><a href="/createSession">Session erstellen</a></li>
 					<li><a href="/joinSession">Session beitreten</a></li>
-					<li><a href="/howTo">HowTo</a></li>
+					<li><a href="/chat">Chat</a></li>
 				</ul>
 			</nav>
 		</header>
