--- a/views/joinSession.html
+++ b/views/joinSession.html
@@ -14,14 +14,14 @@
 					<li><a href="/">Home</a></li>
 					<li><a href="/createSession">Session erstellen</a></li>
 					<li class="active"><a href="/joinSession">Session beitreten</a></li>
-					<li><a href="/howTo">HowTo</a></li>
+					<li><a href="/chat">Chat</a></li>
 				</ul>
 			</nav>
 		</header>
 		<section id="content">
 		  <h2>Session beitreten</h2>
 		  <p>Nehmen Sie an einer Session teil.</p>
-		  <form action="/joinSession" method="post">
+		  <form action="/sessionClient" method="post">
 		    <p>
 		      <label>Name der Session</label>
 		      <input type="text" name="sessionName"/>
