--- a/views/createSession.html
+++ b/views/createSession.html
@@ -14,7 +14,7 @@
 					<li><a href="/">Home</a></li>
 					<li class="active"><a href="/createSession">Session erstellen</a></li>
 					<li><a href="/joinSession">Session beitreten</a></li>
-					<li><a href="/howTo">HowTo</a></li>
+					<li><a href="/chat">Chat</a></li>
 				</ul>
 			</nav>
 		</header>
