--- a/views/sessionClient.html
+++ b/views/sessionClient.html
@@ -4,33 +4,15 @@
 		<title></title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.css">
-		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-		<script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
-		<link rel="stylesheet" href="/stylesheets/style.css">
-		<script src="/socket.io/socket.io.js"></script>
-		<script src="/javascripts/client.js"></script>
+		<!-- <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+		// <script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
+		// <link rel="stylesheet" href="/stylesheets/style.css">
+		// <script src="/socket.io/socket.io.js"></script>
+		// <script src="/javascripts/client.js"></script> -->
 	</head>
 	<body>
 		<div data-role="page">
-			<div data-role="header">
-				<p id="test1"></p>
-			</div>
-			<div data-role="content">
-				<p id="test2"> </p>
-			</div>
-			<p id="test3">
-				<form>
-					<label for="slider-0">| Bet:</label>
-					<input id="slider-0" type="range" name="slider-bet" value="25" min="0" max="100">
-				</form>
-				<br><br>
-				<p> 
-					<ul id="inMsg"></ul>
-				</p>
-				<p> 
-					<input type="text" id="outMsg">
-				</p>
-			</p>
+			
 		</div>
 	</body>
 </html>
