--- a/views/sessionMaster.html
+++ b/views/sessionMaster.html
@@ -3,10 +3,10 @@
 	<head>
 		<title></title>
 		<link rel="stylesheet" href="/stylesheets/style.css">
-		<script src="/javascripts/jquery.js"></script>
-		<script src="/javascripts/jcanvas.min.js"></script>
-		<script src="/socket.io/socket.io.js"></script>
-		<script src="/javascripts/game.js"></script>
+		<!-- <script src="/javascripts/jquery.js"></script>
+		// <script src="/javascripts/jcanvas.min.js"></script>
+		// <script src="/socket.io/socket.io.js"></script>
+		// <script src="/javascripts/game.js"></script> -->
 	</head>
 	<body class="center">
 		<header id="banner">
