API für data Objekte
collection für data Objekte in der Datenbank angelegt
post/get für data Objekte implementiert
test Template fürs Abfragen und Eintragen von data Objekten
mehr jQuery und css Anpassung

--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,7 @@
 			<nav> 
 				<ul>
 					<li class="active"><a href="/">Home</a></li>
+					<li><a href="/dataPage">Data</a></li>
 					<li><a href="/login">Login</a></li>
 					<li><a href="/createSession">Session erstellen</a></li>
 					<li><a href="/joinSession">Session beitreten</a></li>
