--- a/views/login.html
+++ b/views/login.html
@@ -13,6 +13,7 @@
 		<nav> 
 			<ul>
 				<li><a href="/">Home</a></li>
+				<li ><a href="/dataPage">Data</a></li>
 				<li class="active"><a href="/login">Login</a></li>
 				<li><a href="/createSession">Session erstellen</a></li>
 				<li><a href="/joinSession">Session beitreten</a></li>
@@ -58,7 +59,7 @@
 			
 		</div>
 
-		<div id="switchButton">zur Anmeldung </div>
+		<div id="switchButton" class="Button">zur Anmeldung </div>
 	</section>
 </body>
 </html>
