--- a/views/createSession.html
+++ b/views/createSession.html
@@ -12,6 +12,7 @@
 			<nav> 
 				<ul>
 					<li><a href="/">Home</a></li>
+					<li><a href="/dataPage">Data</a></li>
 					<li><a href="/login">Login</a></li>
 					<li class="active"><a href="/createSession">Session erstellen</a></li>
 					<li><a href="/joinSession">Session beitreten</a></li>
