dieverse Layout und Session Arbeiten
Home Seite gestaltet
Anlegen und Beitreten von Sessions zusammengelegt
etc.

--- a/views/chat.html
+++ b/views/chat.html
@@ -14,8 +14,7 @@
 					<li><a href="/">Home</a></li>
 					<li ><a href="/dataPage">Data</a></li>
 					<li><a href="/login">Login</a></li>
-					<li><a href="/createSession">Session erstellen</a></li>
-					<li><a href="/joinSession">Session beitreten</a></li>
+					<li><a href="/session">Sessions</a></li>
 					<li class="active"><a href="/chat">Chat</a></li>
 				</ul>
 			</nav>
