--- a/views/data.html
+++ b/views/data.html
@@ -14,15 +14,13 @@
 				<li><a href="/">Home</a></li>
 				<li class="active"><a href="/dataPage">Data</a></li>
 				<li><a href="/login">Login</a></li>
-				<li><a href="/createSession">Session erstellen</a></li>
-				<li><a href="/joinSession">Session beitreten</a></li>
+				<li><a href="/session">Sessions</a></li>
 				<li><a href="/chat">Chat</a></li>
 			</ul>
 		</nav>
 	</header>
 	<section id="content">
 				
-		<h2><%= title%></h2>
 		<div class="Button" id="showAll">Alle Daten</div><div class="Button" id="search">Daten suchen</div><div class="Button" id="insert">Daten eintragen</div>
 		<div id="showAllBox">
 			
