--- a/views/index.html
+++ b/views/index.html
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title></title>
-		<link rel="stylesheet" href="/stylesheets/style.css">
-		<script src="/javascripts/jquery.js"> </script>
-		<script src="/javascripts/socket.io.js"></script>
-	</head>
-	<body class="center">
+<% include header.html %>
 		<header id="banner">
 			<h1>Webserver</h1>
 			<nav> 
@@ -14,11 +6,16 @@
 					<li class="active"><a href="/">Home</a></li>
 					<li><a href="/dataPage">Data</a></li>
 					<li><a href="/login">Login</a></li>
-					<li><a href="/createSession">Session erstellen</a></li>
-					<li><a href="/joinSession">Session beitreten</a></li>
+					<li><a href="/session">Sessions</a></li>
 					<li><a href="/chat">Chat</a></li>
 				</ul>
 			</nav>
 		</header>
-	</body>
-</html>
+		<section id="content">
+			<p> Dies ist eine Testanwendung. Getestet wird ein Node.js Server.</p>
+			<p> Data: Anzeigen, Anlegen und Manipulieren von Objekten in einer Datenbank</p>
+			<p> Login: Login System. Daten ebenfalls in einer Datenbank hinterlegt. Funktionen sind das Anlegen von neuen Benutzern und das Anmelden von bestehenden Konten. ToDo: Session Coockie Support und Statusanzeige eingeloggt / nicht eingeloggt.</p>
+			<p> Session: Sessions sind anlegbare Sitzungen, auch in der Datenbank hinterlegt. Es gibt einen Master, der auf ein eigenes View geroutet wird. Sowie Clients die sich zu den Sitzungen anmelden können</p>
+			<p> Chat: Eine Chatanwendung zur Demonstration der Websocket Kommunikation </p>
+		</section>
+<% include footer.html %>
