--- a/views/sessionMaster.html
+++ b/views/sessionMaster.html
@@ -1,35 +1,27 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title></title>
-		<link rel="stylesheet" href="/stylesheets/style.css">
-		<!-- <script src="/javascripts/jquery.js"></script>
-		// <script src="/javascripts/jcanvas.min.js"></script>
-		// <script src="/socket.io/socket.io.js"></script>
-		// <script src="/javascripts/game.js"></script> -->
-	</head>
-	<body class="center">
-		<header id="banner">
-			<h1>Session</h1>
-			<nav> 
-				<ul>
-					<li><a href="/">A</a></li>
-					<li><a href="/">B</a></li>
-					<li><a href="/">C</a></li>
-					<li><a href="/">D</a></li>
-				</ul>
-			</nav>
-		</header>
-		<section id="content">
-			<p id="test1"></p>
-			<p id="test2"> </p>
-			<p id="test3"></p>
-			<p> 
-				<ul id="inMsg"></ul>
-			</p>
-			<p> 
-				<input type="text" id="outMsg">
-			</p>
-		</section>
-	</body>
+<head>
+	<title></title>
+	<link rel="stylesheet" href="/stylesheets/style.css">
+	<script src="/javascripts/jquery.js"> </script>
+	<script src="/javascripts/socket.io.js"></script>
+	<script src="/javascripts/session.js"> </script>
+</head>
+<body class="center">
+	<header id="banner">
+		<h1>Webserver</h1>
+		<nav> 
+			<ul>
+				<li><a href="/">Home</a></li>
+				<li><a href="/dataPage">Data</a></li>
+				<li><a href="/login">Login</a></li>
+				<li class="active"><a href="/session">Sessions</a></li>
+				<li><a href="/chat">Chat</a></li>
+			</ul>
+		</nav>
+	</header>
+	<section id="content">
+		<h2>Session Master Page</h2>
+	</section>
+</body>
 </html>
