--- a/views/sessionClient.html
+++ b/views/sessionClient.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title></title>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.css">
-		<!-- <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-		// <script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
-		// <link rel="stylesheet" href="/stylesheets/style.css">
-		// <script src="/socket.io/socket.io.js"></script>
-		// <script src="/javascripts/client.js"></script> -->
-	</head>
-	<body>
-		<div data-role="page">
-			
-		</div>
-	</body>
+<head>
+	<title></title>
+	<link rel="stylesheet" href="/stylesheets/style.css">
+	<script src="/javascripts/jquery.js"> </script>
+	<script src="/javascripts/socket.io.js"></script>
+	<script src="/javascripts/session.js"> </script>
+</head>
+<body class="center">
+	<header id="banner">
+		<h1>Webserver</h1>
+		<nav> 
+			<ul>
+				<li><a href="/">Home</a></li>
+				<li><a href="/dataPage">Data</a></li>
+				<li><a href="/login">Login</a></li>
+				<li class="active"><a href="/session">Sessions</a></li>
+				<li><a href="/chat">Chat</a></li>
+			</ul>
+		</nav>
+	</header>
+	<section id="content">
+		<h2>Session CLient Page</h2>
+	</section>
+</body>
 </html>
