--- a/views/sessionClient.html
+++ b/views/sessionClient.html
@@ -21,7 +21,7 @@
 		</nav>
 	</header>
 	<section id="content">
-		<h2>Session CLient Page</h2>
+		<h2>Session Client Page</h2>
 	</section>
 </body>
 </html>
