--- a/views/index.html
+++ b/views/index.html
@@ -10,11 +10,21 @@
 					<li><a href="/chat">Chat</a></li>
 				</ul>
 			</nav>
+			<div id="login">
+			<%
+				if (loggedIn){ %>	
+					Angemeldet als <%= login %>.
+				<%}
+				else{%>
+					Nicht angemeldet.
+				<%}
+			%>
+			</div>
 		</header>
 		<section id="content">
 			<p> Dies ist eine Testanwendung. Getestet wird ein Node.js Server.</p>
 			<p> Data: Anzeigen, Anlegen und Manipulieren von Objekten in einer Datenbank</p>
-			<p> Login: Login System. Daten ebenfalls in einer Datenbank hinterlegt. Funktionen sind das Anlegen von neuen Benutzern und das Anmelden von bestehenden Konten. ToDo: Session Coockie Support und Statusanzeige eingeloggt / nicht eingeloggt.</p>
+			<p> Login: Login System. Daten ebenfalls in einer Datenbank hinterlegt. Funktionen sind das Anlegen von neuen Benutzern und das Anmelden von bestehenden Konten.</p>
 			<p> Session: Sessions sind anlegbare Sitzungen, auch in der Datenbank hinterlegt. Es gibt einen Master, der auf ein eigenes View geroutet wird. Sowie Clients die sich zu den Sitzungen anmelden können</p>
 			<p> Chat: Eine Chatanwendung zur Demonstration der Websocket Kommunikation </p>
 		</section>
